--- a/src/components/FiltersGroup/index.css
+++ b/src/components/FiltersGroup/index.css
@@ -47,7 +47,7 @@
   display: flex;
   flex-direction: column;
   gap: 18px;
-  margin-top: 25px;
+  /* margin-top: 25px; */
 }
 .category-heading {
   font-family: 'Roboto';
@@ -55,6 +55,13 @@
   font-weight: bold;
   font-size: 18px;
   margin: 0;
+  margin-top: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .category-heading {
+    margin-top: 32px;
+  }
 }
 
 .category-option-text {
@@ -63,6 +70,7 @@
   font-size: 16px;
   font-weight: 400;
   margin: 0;
+  cursor: pointer;
 }
 .active-category {
   color: #0967d2;
@@ -76,13 +84,14 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 .rating-heading {
   font-family: 'Roboto';
   color: #0f172a;
   font-weight: bold;
   font-size: 18px;
+  margin-top: 32px;
 }
 .rating-button {
   display: flex;
@@ -118,7 +127,7 @@
   font-weight: 500;
   cursor: pointer;
   outline: none;
-  margin-top: 25px;
+  margin-top: 18px;
 }
 * {
   /* border: 1px solid red; */
